Adiciona menu fixo

--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
     </div>
   </div>
 </div>
-<div class="menu-wrap">
+<div id="navbar" class="menu-wrap">
   <div class="nav-menu">
     <div class="container">
       <div class="row align-items-center">
