Adiciona navbar correta

--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <!-- ***** NEWS ***** -->
-<div class="sec-bg3 infonews">
+<!-- <div class="sec-bg3 infonews">
   <div class="container-fluid">
     <div class="row">
       <div class="col-6 col-md-7 news">
@@ -17,15 +17,15 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <div id="navbar" class="menu-wrap">
   <div class="nav-menu">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-2 col-md-2">
           <a href="." title="Logo Antler">
-            <img class="svg logo-menu d-block" src="./assets/img/logo.svg" alt="logo Antler" width="200" height="50">
-            <img class="svg logo-menu d-none" src="./assets/img/logo-light.svg" alt="logo Antler" width="200" height="50">
+            <img class="svg logo-menu d-block" src="./assets/img/logo.png" alt="logo Antler" width="110" height="40">
+            <img class="svg logo-menu d-none" src="./assets/img/logo.png" alt="logo Antler" width="110" height="40">
           </a>
         </div>
         <nav id="menu" class="col-10 col-md-10">
@@ -36,7 +36,7 @@
             <span class="icon"></span>
             </button>
             <div class="main-menu nav navbar-nav navbar-right">
-              <div class="menu-item menu-item-has-children">
+               <!--<div class="menu-item menu-item-has-children">
                 <a href="#" data-i18n="[html]header.home" title="Home Page"> </a>
                 <div class="badge bg-purple align-middle horizontalShake">new</div>
                 <ul class="sub-menu dropdown bg-colorstyle">
@@ -251,9 +251,9 @@
               </div>
               <div class="tech-box">
                 <img class="svg" src="./assets/img/menu.svg" alt="" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBackdrop" aria-controls="offcanvasWithBackdrop" width="32px" height="32px" alt="Menu">
-              </div>
+              </div> -->
               <div class="menu-item">
-                <a href="login" class="pe-0 me-0" title="Login"> <div class="btn btn-default-yellow-fill question"><span data-i18n="[html]header.login"></span> <i class="fas fa-lock ps-1"></i> </div></a>
+                <a href="login" class="pe-0 me-0" title="Login"> <div class="btn btn-default-yellow-fill question">Entre Em Contato</span> <i class="fas fa-sort-asc ps-1" style="transform: rotate(45deg)"></i> </div></a>
               </div>
             </div>
           </div>
