--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="INEBUR is owner of Antler">
     <link href="assets/img/favicon.ico" rel="shortcut icon">
-    <title>Antler - Hosting Provider & WHMCS Template</title>
+    <title>Global Forense</title>
     <!-- Font Style -->
     <link href="assets/fonts/fontawesome/css/all.min.css" rel='stylesheet'>
     <link href="assets/fonts/fonts.min.css" rel='stylesheet'>
@@ -63,12 +63,13 @@
           <div class="slider-content">
             <div class="container ">
               <div class="col-sm-12 col-md-7 px-0">
-                <h1 data-aos="fade-up" data-aos-duration="800">Find your New Domain Name</h1>
-                <p data-aos="fade-up" data-aos-duration="1200">Enter the domain and tld you wish to use in the boxes below and click Lookup to see whether the domain is available for purchase.</p>
+                <p class="btnEstilo border-end-0 search initial-transform border-direita mb-2" style="font-size: 10px; padding: 0 10px;">Especialistas Certificados</p>
+                <h1 data-aos="fade-up" data-aos-duration="800">Pesquisa de Bens & Recuperação de Créditos</h1>
+                <p data-aos="fade-up" data-aos-duration="1200">Gestão e Recuperação de Créditos inadimplidos, através da Investigação de Ativos e Pesquisas de Bens que unem Tecnologia e Inteligência Forense, proporcionando Soluções customizadas para Cobranças Judiciais e Extrajudiciais.</p>
                 <form class="domains-search" action="https://inebur.com/whmcs/domainchecker.php?carttpl=antler&systpl=antler" method="post">
                   <input type="text" class="inputdomainsearch special-input border-geral" name="domain" placeholder="eg.example.com" autocapitalize="none" />
                   <span class="ds-content">
-                    <input type="submit" class="btn btn-default-yellow-fill border-end-0 search initial-transform border-direita" value="Search">
+                    <input type="submit" class="btn btn-default-yellow-fill border-end-0 search initial-transform border-direita" value="Pesquisar">
                     <button data-bs-toggle="tooltip" data-bs-placement="bottom" title="Transfer" type="submit" name="transfer" class="btn btn-default-fill border-start-0 initial-transform ms-1 border-geral" value="{$LANG.domainstransfer}"><i class="fa-solid fa-repeat"></i></button>
                   </span>
                 </form>
@@ -100,7 +101,7 @@
               <div class="lazyload">
                 <svg class="svg mb-3" width="32" height="32" viewBox="0 0 32 32"><path id="svg-ico" d="M21.294 1.969h-.232c-5.325.087-10.656 3.756-10.656 10.688 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-6.719 5.125-9.8 9.912-9.838 5.387.038 9.762 4.438 9.762 9.838 0 5.425-4.412 9.837-9.838 9.837H7.767c-3.725 0-6.756-3.031-6.756-6.756s3.031-6.756 6.756-6.756c.238 0 .425-.194.425-.425s-.194-.425-.425-.425c-4.2-.006-7.612 3.412-7.612 7.606s3.413 7.613 7.612 7.613h13.331c5.894 0 10.694-4.794 10.694-10.694 0-5.825-4.694-10.581-10.5-10.688z"/><path fill="#5e686c" d="M24.413 28.15h-6.781c-.156-.6-.631-1.075-1.231-1.231v-2.194c0-.238-.194-.425-.425-.425-.238 0-.425.194-.425.425v2.194c-.6.156-1.075.631-1.231 1.231H7.539c-.237 0-.425.194-.425.425s.194.425.425.425h6.781c.188.738.863 1.281 1.656 1.281s1.469-.544 1.656-1.281h6.781c.238 0 .425-.194.425-.425s-.188-.425-.425-.425zm-8.438 1.281c-.469 0-.856-.381-.856-.856 0-.469.381-.856.856-.856s.856.381.856.856-.387.856-.856.856zM21.238 6.931c.238 0 .425-.194.425-.431-.006-.237-.219-.444-.431-.425-3.381.044-6.375 2.719-6.675 6.044l.006.075c.006.156.012.313.012.463 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-.162-.006-.331-.012-.525l-.012-.019c.269-2.819 2.888-5.144 5.838-5.181z"/></svg>
               </div>
-              <div class="title">Shared Hosting</div>
+              <div class="title">Desblindagem Patrimonial</div>
               <div class="fromer seccolor">Starting at:</div>
               <div class="price seccolor"><sup>$</sup>8.19 <span class="period">/month</span></div>
               <a href="#" class="btn btn-default-yellow-fill" style="border-radius:100px!important;">All plans</a>
@@ -130,6 +131,25 @@
               <li><i class="icon-ram"></i> <div>RAM<br> <span>16GB (up to 32GB)</span></div></li>
               <li><i class="icon-drivessd"></i> <div>DRIVES<br> <span>2 x 1TB SATA 3.5</span></div></li>
               <li><i class="icon-git"></i> <div>UPLINK<br> <span>1Gbps - 20TB</span></div></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-4">
+          <div class="wrapper third text-start noshadow">
+            <div class="top-content bg-seccolorstyle topradius">
+              <div class="lazyload">
+                <svg class="svg mb-3" width="32" height="32" viewBox="0 0 32 32"><path fill="#5e686b" d="M29.55 13.35H13.37a.42.42 0 0 0 0 .84h16.18c.65 0 1.18.45 1.18 1.02v8.05c0 .57-.53 1.03-1.18 1.03H2.47c-.65 0-1.18-.46-1.18-1.03v-8.05c0-.56.53-1.02 1.18-1.02h4.17a.42.42 0 0 0 0-.84H2.47c-1.11 0-2.03.84-2.03 1.86v8.05c0 1.03.91 1.87 2.03 1.87h27.08c1.11 0 2.02-.84 2.02-1.87v-8.05c0-1.02-.9-1.86-2.02-1.86zM29.55.27H13.37a.42.42 0 0 0 0 .84h16.18c.65 0 1.18.45 1.18 1.02v8.05c0 .57-.53 1.03-1.18 1.03H2.47c-.65 0-1.18-.46-1.18-1.03V2.13c0-.56.53-1.02 1.18-1.02h4.17a.42.42 0 0 0 0-.84H2.47C1.36.27.45 1.1.45 2.13v8.05c0 1.03.9 1.86 2.03 1.86h27.08c1.1 0 2.02-.83 2.02-1.86V2.13c0-1.02-.92-1.86-2.03-1.86z"/><path id="svg-ico" d="M25.77 19.66a.42.42 0 0 0 0-.84h-2.16a.42.42 0 0 0 0 .84h2.16zM25.77 6.58a.42.42 0 0 0 0-.84h-2.16a.42.42 0 0 0 0 .83h2.16z"/><path fill="#5e686b" d="M26 29.61h-8.36a1.7 1.7 0 0 0-1.2-1.2v-1.88a.42.42 0 0 0-.85 0v1.87c-.58.15-1.05.62-1.2 1.21H6.02a.42.42 0 0 0 0 .84h8.36a1.69 1.69 0 0 0 3.26 0H26c.23 0 .42-.19.42-.42 0-.23-.2-.42-.43-.42zM16 30.88a.84.84 0 1 1 0-1.7.84.84 0 0 1 0 1.7z"/></svg>
+              </div>
+              <div class="title">Cloud VPS</div>
+              <div class="fromer seccolor">Starting at:</div>
+              <div class="price seccolor"><sup>$</sup>9.99 <span class="period">/month</span></div>
+              <a href="#" class="btn btn-default-yellow-fill" style="border-radius:100px!important;">All plans</a>
+            </div>
+            <ul class="list-info bg-purple">
+              <li><i class="icon-cpu"></i> <div>CPU<br> <span>2 Cores</span></div></li>
+              <li><i class="icon-ram"></i> <div>RAM<br> <span>2GB Memory</span></div></li>
+              <li><i class="icon-drives"></i> <div>DISK<br> <span>20GB SSD Space</span></div></li>
+              <li><i class="icon-speed"></i> <div>DATA<br> <span>1TB Bandwidth</span></div></li>
             </ul>
           </div>
         </div>
