--- a/index.html
+++ b/index.html
@@ -462,17 +462,11 @@
           <div id="mainVideo" class="slider-content">
             <div class="container ">
               <div class="col-sm-12 col-md-7 px-0">
-                <p class="btnEstilo border-end-0 search initial-transform border-direita mb-2" style="font-size: 10px; padding: 0 10px;">Especialistas Certificados</p>
+                <p class="btnEstilo border-end-0 search initial-transform border-direita mb-2" style="font-size: 10px; padding: 0 10px;">Investigação de Ativos</p>
                 <h1 data-aos="fade-up" data-aos-duration="800">Pesquisa de Bens & Recuperação de Créditos</h1>
                 <p data-aos="fade-up" data-aos-duration="1200">Gestão e Recuperação de Créditos inadimplidos, através da Investigação de Ativos e Pesquisas de Bens que unem Tecnologia e Inteligência Forense, proporcionando Soluções customizadas para Cobranças Judiciais e Extrajudiciais.</p>
-                <form class="domains-search" action="https://inebur.com/whmcs/domainchecker.php?carttpl=antler&systpl=antler" method="post">
-                  <input type="text" class="inputdomainsearch special-input border-geral" name="domain" placeholder="eg.example.com" autocapitalize="none" />
-                  <span class="ds-content">
-                    <input type="submit" class="btn btn-default-yellow-fill border-end-0 search initial-transform border-direita" value="Pesquisar">
-                    <button data-bs-toggle="tooltip" data-bs-placement="bottom" title="Transfer" type="submit" name="transfer" class="btn btn-default-fill border-start-0 initial-transform ms-1 border-geral" value="{$LANG.domainstransfer}"><i class="fa-solid fa-repeat"></i></button>
-                  </span>
-                </form>
-                <div class="special-note"><span class="text">Search a domain of your choise from <b>$6.00/yr</b></span></div>
+
+                <a href="#services" class="btn btn-default-yellow-fill border-start-0 initial-transform ms-1 border-geral"><i class="fa-solid fa-arrow-right"></i> Confira Nossos Serviços</a>
               </div>
             </div>
           </div>
@@ -551,7 +545,7 @@
     </div>
   </section>
   <!-- ***** FEATURES ***** -->
-  <section class="services sec-normal sec-bg2 bg-seccolorstyle">
+  <section id="services" class="services sec-normal sec-bg2 bg-seccolorstyle">
     <div class="container">
       <div class="service-wrap">
         <div class="row">
@@ -806,8 +800,109 @@
       </div>
     </div>
   </section>
-  <!-- ***** UPLOADED FOOTER FROM FOOTER.HTML ***** -->
-<footer id="footer"> </footer>
+  <!-- ***** FOOTER ***** -->
+<footer id="footer" class="footer">
+    <img class="logo-bg logo-footer" src="./assets/img/symbol.svg" alt="logo" width="600" height="290">
+    <div class="container">
+      <div class="footer-top">
+        <div class="row">
+          <div class="col-sm-6 col-md-3">
+            <div class="heading">Hosting</div>
+            <ul class="footer-menu">
+              <li class="menu-item"><a href="hosting" title="Shared Hosting">Shared Hosting</a></li>
+              <li class="menu-item"><a href="dedicated" title="Dedicated Server">Dedicated Server</a></li>
+              <li class="menu-item"><a href="vps" title="Cloud Virtual (VPS)">Cloud Virtual (VPS)</a></li>
+              <li class="menu-item"><a href="domains" title="Domain Names">Domain Names</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="heading">Support</div>
+            <ul class="footer-menu">
+              <li class="menu-item"><a href="login" title="myAntler">myAntler</a></li>
+              <li class="menu-item"><a href="knowledgebase-list" title="Knowledge Base">Knowledge Base</a></li>
+              <li class="menu-item"><a href="contact" title="Contact Us">Contact Us</a></li>
+              <li class="menu-item"><a href="faq" title="FAQ">FAQ</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="heading">Company</div>
+            <ul class="footer-menu">
+              <li class="menu-item"><a href="about" title="About Us">About Us</a> </li>
+              <li class="menu-item"><a href="elements" title="Features">Features</a></li>
+              <li class="menu-item"><a href="blog-details" title="Blog">Blog</a></li>
+              <li class="menu-item"><a href="legal" title="Legal">Legal</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <img class="svg logo-footer d-block" src="./assets/img/logo.svg" alt="logo" width="200" height="50">
+            <img class="svg logo-footer d-none" src="./assets/img/logo-light.svg" alt="logo" width="200" height="50">
+            <div class="copyright">© Copyright 2019 - 2024 | Antler Hosting Provider & WHMCS Template by INEBUR All rights reserved</div>
+            <div class="soc-icons">
+              <a href="#" title="Facebook"><i class="fab fa-facebook-f withborder noshadow"></i></a>
+              <a href="#" title="youtube"><i class="fab fa-youtube withborder noshadow"></i></a>
+              <a href="#" title="Twitter"><i class="fab fa-x-twitter withborder noshadow"></i></a>
+              <a href="#" title="Instagram"><i class="fab fa-instagram withborder noshadow"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="subcribe news">
+      <div class="container">
+        <div class="row">
+          <form action="#" class="w-100">
+            <div class="col-md-6 offset-md-3">
+              <div class="general-input">
+                <input class="fill-input" type="email" name="email" data-i18n="[placeholder]header.login" style="border-radius:100px!important;">
+                <input type="submit" value="SUBSCRIBE" class="btn btn-default-yellow-fill initial-transform" style="border-radius:0 100px 100px 0!important;">
+              </div>
+            </div>
+            <div class="col-md-6 offset-md-3 text-center pt-4">
+              <p>Subscribe our newsletter to receive news and updates</p>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <ul class="footer-menu">
+              <li id="drop-lng" class="btn-lang-footer btn-group btn-group-toggle">
+                <label data-lng="en-US" for="option1" class="btn btn-secondary me-1 styletextDirection" data-value="ltr" style="border-radius:100px!important;">
+                  <input type="radio" name="options" id="option1" checked> EN
+                </label>
+                <label data-lng="pt-PT" for="option2" class="btn btn-secondary me-1 styletextDirection" data-value="ltr" style="border-radius:100px!important;">
+                  <input type="radio" name="options" id="option2"> PT
+                </label>
+                <label data-lng="ar-AR" for="option3" class="btn btn-secondary me-1 styletextDirection" data-value="rtl" style="border-radius:100px!important;">
+                  <input type="radio" name="options" id="option3"> AR
+                </label>
+                <label data-lng="es-ES" for="option4" class="btn btn-secondary me-1 styletextDirection" data-value="ltr" style="border-radius:100px!important;">
+                  <input type="radio" name="options" id="option4"> ES
+                </label>
+              </li>
+              <li class="menu-item by">Hybrid Design With <span class="c-pink">♥</span> by
+              <a href="http://inebur.com/" target="_blank">Inebur</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-6">
+          <ul class="payment-list">
+            <li><p>Payments We Accept</p></li>
+            <li><i class="fab fa-cc-paypal"></i></li>
+            <li><i class="fab fa-cc-visa"></i></li>
+            <li><i class="fab fa-cc-mastercard"></i></li>
+            <li><i class="fab fa-cc-apple-pay"></i></li>
+            <li><i class="fab fa-cc-discover"></i></li>
+            <li><i class="fab fa-cc-amazon-pay"></i></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 </div>
 <!-- ***** BUTTON GO TOP ***** -->
 <a href="#" class="cd-top" title="Go Top"> <i class="fas fa-angle-up"></i> </a>
