--- a/index.html
+++ b/index.html
@@ -800,6 +800,148 @@
       </div>
     </div>
   </section>
+  <!-- ***** FAC ***** -->
+  <section id="faq" class="sec-normal sec-bg2 bg-colorstyle bottomhalfpadding">
+    <div class="faq">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12 text-center">
+            <h2 class="section-heading mergecolor">Frequently Asked Questions Email Security</h2>
+            <p class="section-subheading mergecolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+          </div>
+          <div class="col-sm-12">
+            <div class="accordion faq pt-5">
+              <div class="panel-wrap">
+                <div class="panel-title seccolor active">
+                  <span>What is Email Security with SpamExperts?</span>
+                  <div class="float-end">
+                    <i class="fa fa-plus"></i>
+                    <i class="fa fa-minus c-pink"></i>
+                  </div>
+                </div>
+                <div class="panel-collapse" style="display: block;">
+                  <div class="wrapper-collapse">
+                    <div class="info">
+                      <ul class="list seccolor">
+                        <li>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel-wrap">
+                <div class="panel-title seccolor">
+                  <span>Can I Backup multiple emails if I have to?</span>
+                  <div class="float-end">
+                    <i class="fa fa-plus"></i>
+                    <i class="fa fa-minus c-pink"></i>
+                  </div>
+                </div>
+                <div class="panel-collapse">
+                  <div class="wrapper-collapse">
+                    <div class="info">
+                      <ul class="list seccolor">
+                        <li>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel-wrap">
+                <div class="panel-title seccolor">
+                  <span>I have total control and management?</span>
+                  <div class="float-end">
+                    <i class="fa fa-plus"></i>
+                    <i class="fa fa-minus c-pink"></i>
+                  </div>
+                </div>
+                <div class="panel-collapse">
+                  <div class="wrapper-collapse">
+                    <div class="info">
+                      <ul class="list seccolor">
+                        <li>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel-wrap">
+                <div class="panel-title seccolor">
+                  <span>What type of support do you offer?</span>
+                  <div class="float-end">
+                    <i class="fa fa-plus"></i>
+                    <i class="fa fa-minus c-pink"></i>
+                  </div>
+                </div>
+                <div class="panel-collapse">
+                  <div class="wrapper-collapse">
+                    <div class="info">
+                      <ul class="list seccolor">
+                        <li>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- ***** HELP ***** -->
+  <section class="help pt-4 pb-80 notoppadding bg-colorstyle">
+    <div class="container">
+      <div class="service-wrap">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="help-container bg-seccolorstyle noshadow">
+              <div class="plans badge feat left bg-grey"><i class="fas fa-long-arrow-alt-left"></i></div>
+              <a href="hosting" class="help-item">
+                <div class="img">
+                  <div class="lazyload">
+                    <svg class="svg ico" viewBox="0 0 32 32"><path id="svg-ico" d="M21.294 1.969h-.232c-5.325.087-10.656 3.756-10.656 10.688 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-6.719 5.125-9.8 9.912-9.838 5.387.038 9.762 4.438 9.762 9.838 0 5.425-4.412 9.837-9.838 9.837H7.767c-3.725 0-6.756-3.031-6.756-6.756s3.031-6.756 6.756-6.756c.238 0 .425-.194.425-.425s-.194-.425-.425-.425c-4.2-.006-7.612 3.412-7.612 7.606s3.413 7.613 7.612 7.613h13.331c5.894 0 10.694-4.794 10.694-10.694 0-5.825-4.694-10.581-10.5-10.688z"/><path fill="#5e686c" d="M24.413 28.15h-6.781c-.156-.6-.631-1.075-1.231-1.231v-2.194c0-.238-.194-.425-.425-.425-.238 0-.425.194-.425.425v2.194c-.6.156-1.075.631-1.231 1.231H7.539c-.237 0-.425.194-.425.425s.194.425.425.425h6.781c.188.738.863 1.281 1.656 1.281s1.469-.544 1.656-1.281h6.781c.238 0 .425-.194.425-.425s-.188-.425-.425-.425zm-8.438 1.281c-.469 0-.856-.381-.856-.856 0-.469.381-.856.856-.856s.856.381.856.856-.387.856-.856.856zM21.238 6.931c.238 0 .425-.194.425-.431-.006-.237-.219-.444-.431-.425-3.381.044-6.375 2.719-6.675 6.044l.006.075c.006.156.012.313.012.463 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-.162-.006-.331-.012-.525l-.012-.019c.269-2.819 2.888-5.144 5.838-5.181z"/></svg>
+                  </div>
+                </div>
+                <div class="inform">
+                  <div class="title mergecolor">Go to Shared Hosting</div>
+                  <div class="description seccolor">Need similar power but a simpler solution?</div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="help-container bg-seccolorstyle noshadow">
+              <div class="plans badge feat bg-grey"><i class="fas fa-long-arrow-alt-right"></i></div>
+              <a href="dedicated" class="help-item">
+                <div class="img">
+                  <div class="lazyload">
+                    <svg class="svg ico" viewBox="0 0 32 32"><path id="svg-ico" fill="#ee5586" d="M24.68 17.74a1.68 1.68 0 1 0 0 3.36 1.68 1.68 0 0 0 0-3.36zm0 2.53a.84.84 0 1 1 0-1.68.84.84 0 1 1 0 1.68z"/><path fill="#5e686c" d="M29.54 13.54H2.46c-1.12 0-2.02.84-2.02 1.86v8.05c0 1.03.9 1.86 2.02 1.86h27.08c1.12 0 2.02-.83 2.02-1.86V15.4c0-1.02-.9-1.86-2.02-1.86zm1.18 9.91c0 .56-.53 1.02-1.18 1.02H2.46c-.65 0-1.18-.45-1.18-1.02V15.4c0-.56.53-1.03 1.18-1.03h27.08c.65 0 1.18.46 1.18 1.03v8.05z"/><path id="svg-ico" fill="#ee5586" d="M24.68 4.66a1.68 1.68 0 1 0 0 3.36 1.68 1.68 0 0 0 0-3.36zm0 2.53c-.46 0-.84-.38-.84-.85s.37-.83.84-.83.85.37.85.83c0 .47-.39.85-.85.85z"/><path fill="#5e686c" d="M29.54.46H2.46C1.34.46.44 1.29.44 2.32v8.05c0 1.02.9 1.86 2.02 1.86h27.08c1.12 0 2.02-.84 2.02-1.86V2.32c0-1.03-.9-1.86-2.02-1.86zm1.18 9.9c0 .57-.53 1.03-1.18 1.03H2.46c-.65 0-1.18-.45-1.18-1.02V2.32c0-.56.53-1.03 1.18-1.03h27.08c.65 0 1.18.46 1.18 1.03v8.05zM25.99 29.8h-8.36a1.7 1.7 0 0 0-1.2-1.21V26.7a.42.42 0 0 0-.84 0v1.88c-.59.15-1.06.62-1.2 1.21H6a.42.42 0 0 0 0 .84h8.36a1.69 1.69 0 0 0 3.26 0H26a.42.42 0 0 0 0-.84zM16 31.06a.84.84 0 1 1 0-1.69.84.84 0 0 1 0 1.7z"/></svg>
+                  </div>
+                </div>
+                <div class="inform">
+                  <div class="title mergecolor">Go to Dedicated Server</div>
+                  <div class="description seccolor">Need more power and resources?</div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- ***** FOOTER ***** -->
 <footer id="footer" class="footer">
     <img class="logo-bg logo-footer" src="./assets/img/symbol.svg" alt="logo" width="600" height="290">
