Adiciona seção de tecnologia investigativa

--- a/index.html
+++ b/index.html
@@ -481,66 +481,59 @@
     </div>
   </section>
   <!-- ***** PRICING TABLES ***** -->
-  <section class="pricing special sec-up-slider bg-colorstyle specialposition">
+  <section class="services bg-colorstyle sec-up-slider toppadding bottompadding">
     <div class="container">
-      <div class="row d-flex justify-content-center">
-        <div class="col-sm-12 col-md-4 col-lg-4">
-          <div class="wrapper first text-start noshadow">
-            <div class="top-content bg-seccolorstyle topradius">
-              <div class="lazyload">
-                <svg class="svg mb-3" width="32" height="32" viewBox="0 0 32 32"><path id="svg-ico" d="M21.294 1.969h-.232c-5.325.087-10.656 3.756-10.656 10.688 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-6.719 5.125-9.8 9.912-9.838 5.387.038 9.762 4.438 9.762 9.838 0 5.425-4.412 9.837-9.838 9.837H7.767c-3.725 0-6.756-3.031-6.756-6.756s3.031-6.756 6.756-6.756c.238 0 .425-.194.425-.425s-.194-.425-.425-.425c-4.2-.006-7.612 3.412-7.612 7.606s3.413 7.613 7.612 7.613h13.331c5.894 0 10.694-4.794 10.694-10.694 0-5.825-4.694-10.581-10.5-10.688z"/><path fill="#5e686c" d="M24.413 28.15h-6.781c-.156-.6-.631-1.075-1.231-1.231v-2.194c0-.238-.194-.425-.425-.425-.238 0-.425.194-.425.425v2.194c-.6.156-1.075.631-1.231 1.231H7.539c-.237 0-.425.194-.425.425s.194.425.425.425h6.781c.188.738.863 1.281 1.656 1.281s1.469-.544 1.656-1.281h6.781c.238 0 .425-.194.425-.425s-.188-.425-.425-.425zm-8.438 1.281c-.469 0-.856-.381-.856-.856 0-.469.381-.856.856-.856s.856.381.856.856-.387.856-.856.856zM21.238 6.931c.238 0 .425-.194.425-.431-.006-.237-.219-.444-.431-.425-3.381.044-6.375 2.719-6.675 6.044l.006.075c.006.156.012.313.012.463 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-.162-.006-.331-.012-.525l-.012-.019c.269-2.819 2.888-5.144 5.838-5.181z"/></svg>
-              </div>
-              <div class="title">Desblindagem Patrimonial</div>
+      <div class="col-md-12 text-center" style="margin-bottom: 60px !important;">
+        <h2 class="section-heading text-white mergecolor">Tecnologia <b class="c-pink">Investigativa</b></h2>
+        <p class="section-subheading text-white mergecolor">Especialistas em localizar Informações, Bens, Direitos e Recebíveis no Brasil e no Exterior</p>
+      </div>
+      <div class="sec-main mb-0 sec-bg1 bg-colorstyle nomargin nopadding noshadow service-wrap">
+        <div class="randomline hideelement">
+          <div class="bigline"></div>
+          <div class="smallline"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-3">
+            <div class="service-section rounded-0 p-0 m-0 me-2 entrychange border-end shadow-none bg-colorstyle noshadow">
+              <img class="svg" src="./assets/fonts/svg/unlock.svg" alt="">
+              <div class="title mergecolor">Desblindagem Patrimonial</div>
+              <p class="subtitle seccolor">
+                Desfazimento de Blindagens Patrimoniais Avançadas, através do rastreamento e análise dos bens dos devedores e de todos os envolvidos no Grupo Econômico.
+              </p>
+              <!-- <a href="#" class="btn btn-default-yellow-fill">Read more</a> -->
             </div>
-            <div class="list-info bg-purple" style="position: relative">
-              <i class="fa fa-check-circle" style="font-size: 35px; position: absolute; top: 10px; left: 10px;"></i>
-              <p>Desfazimento de Blindagens Patrimoniais Avançadas, através do rastreamento e análise dos bens dos devedores e de todos os envolvidos no Grupo Econômico.</p>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-3">
+            <div class="service-section rounded-0 p-0 m-0 entrychange border-end  shadow-none bg-colorstyle noshadow">
+              <img class="svg" src="./assets/fonts/svg/cryptowallet.svg" alt="">
+              <div class="title mergecolor">Recuperação de Créditos</div>
+              <p class="subtitle seccolor">
+                Gestão estratégica de carteiras de créditos não performados (NPL). Aliamos tecnologia, inteligência e experiência para entregar os melhores resultados!
+              </p>
+              <!-- <a href="#" class="btn btn-default-yellow-fill">Read more</a> -->
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-3">
+            <div class="service-section rounded-0 p-0 m-0 entrychange border-end  shadow-none bg-colorstyle noshadow">
+              <img class="svg" src="./assets/fonts/svg/index.svg" alt="">
+              <div class="title mergecolor">Estratégias acertivas</div>
+              <p class="subtitle seccolor">
+                Combinamos Tecnologia e Inteligência Forense para criar, acelerar ou desenvolver jornadas de Recuperação de Crédito em qualquer estrutura ou modelo de negócio.
+              </p>
+              <!-- <a href="#" class="btn btn-default-yellow-fill">Read more</a> -->
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-3">
+            <div class="service-section rounded-0 p-0 m-0 shadow-none bg-colorstyle noshadow">
+              <img class="svg" src="./assets/fonts/svg/cctv.svg" alt="">
+              <div class="title mergecolor">Análise de Indícios de Fraude</div>
+              <p class="subtitle seccolor">
+                Nossas Investigações geram indicadores que auxiliam credores, advogados e gestores de recuperação de créditos judiciais e extrajudiciais, apontando eventuais indícios de fraudes e dilapidação patrimonial.
+              </p>
+              <!-- <a href="#" class="btn btn-default-yellow-fill">Read more</a> -->
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-4">
-          <div class="wrapper first text-start noshadow">
-            <div class="top-content bg-seccolorstyle topradius">
-              <div class="lazyload">
-                <svg class="svg mb-3" width="32" height="32" viewBox="0 0 32 32"><path id="svg-ico" d="M21.294 1.969h-.232c-5.325.087-10.656 3.756-10.656 10.688 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-6.719 5.125-9.8 9.912-9.838 5.387.038 9.762 4.438 9.762 9.838 0 5.425-4.412 9.837-9.838 9.837H7.767c-3.725 0-6.756-3.031-6.756-6.756s3.031-6.756 6.756-6.756c.238 0 .425-.194.425-.425s-.194-.425-.425-.425c-4.2-.006-7.612 3.412-7.612 7.606s3.413 7.613 7.612 7.613h13.331c5.894 0 10.694-4.794 10.694-10.694 0-5.825-4.694-10.581-10.5-10.688z"/><path fill="#5e686c" d="M24.413 28.15h-6.781c-.156-.6-.631-1.075-1.231-1.231v-2.194c0-.238-.194-.425-.425-.425-.238 0-.425.194-.425.425v2.194c-.6.156-1.075.631-1.231 1.231H7.539c-.237 0-.425.194-.425.425s.194.425.425.425h6.781c.188.738.863 1.281 1.656 1.281s1.469-.544 1.656-1.281h6.781c.238 0 .425-.194.425-.425s-.188-.425-.425-.425zm-8.438 1.281c-.469 0-.856-.381-.856-.856 0-.469.381-.856.856-.856s.856.381.856.856-.387.856-.856.856zM21.238 6.931c.238 0 .425-.194.425-.431-.006-.237-.219-.444-.431-.425-3.381.044-6.375 2.719-6.675 6.044l.006.075c.006.156.012.313.012.463 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-.162-.006-.331-.012-.525l-.012-.019c.269-2.819 2.888-5.144 5.838-5.181z"/></svg>
-              </div>
-              <div class="title">Recuperação de Créditos</div>
-            </div>
-            <div class="list-info bg-purple" style="position: relative">
-              <i class="fa fa-check-circle" style="font-size: 35px; position: absolute; top: 10px; left: 10px;"></i>
-              <p>Gestão estratégica de carteiras de créditos não performados (NPL). Aliamos tecnologia, inteligência e experiência para entregar os melhores resultados!</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-4">
-          <div class="wrapper first text-start noshadow">
-            <div class="top-content bg-seccolorstyle topradius">
-              <div class="lazyload">
-                <svg class="svg mb-3" width="32" height="32" viewBox="0 0 32 32"><path id="svg-ico" d="M21.294 1.969h-.232c-5.325.087-10.656 3.756-10.656 10.688 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-6.719 5.125-9.8 9.912-9.838 5.387.038 9.762 4.438 9.762 9.838 0 5.425-4.412 9.837-9.838 9.837H7.767c-3.725 0-6.756-3.031-6.756-6.756s3.031-6.756 6.756-6.756c.238 0 .425-.194.425-.425s-.194-.425-.425-.425c-4.2-.006-7.612 3.412-7.612 7.606s3.413 7.613 7.612 7.613h13.331c5.894 0 10.694-4.794 10.694-10.694 0-5.825-4.694-10.581-10.5-10.688z"/><path fill="#5e686c" d="M24.413 28.15h-6.781c-.156-.6-.631-1.075-1.231-1.231v-2.194c0-.238-.194-.425-.425-.425-.238 0-.425.194-.425.425v2.194c-.6.156-1.075.631-1.231 1.231H7.539c-.237 0-.425.194-.425.425s.194.425.425.425h6.781c.188.738.863 1.281 1.656 1.281s1.469-.544 1.656-1.281h6.781c.238 0 .425-.194.425-.425s-.188-.425-.425-.425zm-8.438 1.281c-.469 0-.856-.381-.856-.856 0-.469.381-.856.856-.856s.856.381.856.856-.387.856-.856.856zM21.238 6.931c.238 0 .425-.194.425-.431-.006-.237-.219-.444-.431-.425-3.381.044-6.375 2.719-6.675 6.044l.006.075c.006.156.012.313.012.463 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-.162-.006-.331-.012-.525l-.012-.019c.269-2.819 2.888-5.144 5.838-5.181z"/></svg>
-              </div>
-              <div class="title">Estratégias acertivas</div>
-            </div>
-            <div class="list-info bg-purple" style="position: relative">
-              <i class="fa fa-check-circle" style="font-size: 35px; position: absolute; top: 10px; left: 10px;"></i>
-              <p>Combinamos Tecnologia e Inteligência Forense para criar, acelerar ou desenvolver jornadas de Recuperação de Crédito em qualquer estrutura ou modelo de negócio.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-4">
-          <div class="wrapper first text-start noshadow">
-            <div class="top-content bg-seccolorstyle topradius">
-              <div class="lazyload">
-                <svg class="svg mb-3" width="32" height="32" viewBox="0 0 32 32"><path id="svg-ico" d="M21.294 1.969h-.232c-5.325.087-10.656 3.756-10.656 10.688 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-6.719 5.125-9.8 9.912-9.838 5.387.038 9.762 4.438 9.762 9.838 0 5.425-4.412 9.837-9.838 9.837H7.767c-3.725 0-6.756-3.031-6.756-6.756s3.031-6.756 6.756-6.756c.238 0 .425-.194.425-.425s-.194-.425-.425-.425c-4.2-.006-7.612 3.412-7.612 7.606s3.413 7.613 7.612 7.613h13.331c5.894 0 10.694-4.794 10.694-10.694 0-5.825-4.694-10.581-10.5-10.688z"/><path fill="#5e686c" d="M24.413 28.15h-6.781c-.156-.6-.631-1.075-1.231-1.231v-2.194c0-.238-.194-.425-.425-.425-.238 0-.425.194-.425.425v2.194c-.6.156-1.075.631-1.231 1.231H7.539c-.237 0-.425.194-.425.425s.194.425.425.425h6.781c.188.738.863 1.281 1.656 1.281s1.469-.544 1.656-1.281h6.781c.238 0 .425-.194.425-.425s-.188-.425-.425-.425zm-8.438 1.281c-.469 0-.856-.381-.856-.856 0-.469.381-.856.856-.856s.856.381.856.856-.387.856-.856.856zM21.238 6.931c.238 0 .425-.194.425-.431-.006-.237-.219-.444-.431-.425-3.381.044-6.375 2.719-6.675 6.044l.006.075c.006.156.012.313.012.463 0 .238.194.425.425.425.238 0 .425-.194.425-.425 0-.162-.006-.331-.012-.525l-.012-.019c.269-2.819 2.888-5.144 5.838-5.181z"/></svg>
-              </div>
-              <div class="title">Análise de Indícios de Fraude</div>
-            </div>
-            <div class="list-info bg-purple" style="position: relative">
-              <i class="fa fa-check-circle" style="font-size: 35px; position: absolute; top: 10px; left: 10px;"></i>
-              <p>Nossas Investigações geram indicadores que auxiliam credores, advogados e gestores de recuperação de créditos judiciais e extrajudiciais, apontando eventuais indícios de fraudes e dilapidação patrimonial.</p>
-            </div>
-          </div>
-        </div>
-
       </div>
     </div>
   </section>
@@ -549,9 +542,9 @@
     <div class="container">
       <div class="service-wrap">
         <div class="row">
-          <div class="col-sm-12 text-center">
-            <h2 class="section-subheading seccolor">Nossas Soluções</h2>
-            <p class="section-heading seccolor" style="font-size: 40px !important">Combinamos tecnologia e inteligência forense para criar, desenvolver e acelerar jornadas de recuperação de crédito em qualquer modelo de negócio.</p>
+          <div class="col-md-12 text-center">
+            <h2 class="section-heading text-white mergecolor">Nossas <b class="c-pink">Soluções</b></h2>
+            <p class="section-subheading text-white mergecolor">Combinamos tecnologia e inteligência forense para criar, desenvolver e acelerar jornadas de recuperação de crédito em qualquer modelo de negócio.</p>
           </div>
 
           <div class="col-sm-12 col-md-4" data-aos="fade-up" data-aos-duration="1200">
