Adiciona console.log para teste

--- a/index.html
+++ b/index.html
@@ -1060,6 +1060,7 @@ fade: true
     }
 
     document.addEventListener('scroll', () => {
+      console.log('oi')
       VerificaTelas(main, mapa);
     });
   })
