--- a/index.html
+++ b/index.html
@@ -22,17 +22,12 @@
     <link rel="stylesheet" href="assets/css/stylePersonalizado.css">
     <!-- Javascript -->
     <script type="text/javascript" src="assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/gdpr-cookie.min.js"></script>
-    <script type="text/javascript" src="assets/js/flickity.pkgd.min.js"></script>
-    <script type="text/javascript" src="assets/js/flickity-fade.min.js"></script>
     <script defer type="text/javascript" src="assets/js/popper.min.js"></script>
     <script defer type="text/javascript" src="assets/js/bootstrap.min.js"></script>
     <script defer type="text/javascript" src="assets/js/slick.min.js"></script>
     <script defer type="text/javascript" src="assets/js/aos.min.js"></script>
     <script defer type="text/javascript" src="assets/js/swiper.min.js"></script>
-    <script defer type="text/javascript" src="assets/js/jquery.lazyload-any.min.js"></script>
     <script defer type="text/javascript" src="assets/js/scripts.min.js"></script>
-    <!-- <script defer type="text/javascript" src="assets/js/settings-init.js"></script> -->
   </head>
   <body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" data-layout="wide" data-color="pink" data-background="origin" data-font="opensans" data-header="static" data-textdirection="ltr" data-radius="defaultradius">
     <div class="box-container limit-width">
@@ -41,7 +36,7 @@
       <div class="spinner">
         <div class="double-bounce1"></div>
         <div class="double-bounce2"></div>
-        <div class="spinner-txt">Global Forense...</div>
+        <div class="spinner-txt" style="font-size: 20px">Global Forense...</div>
       </div>
     </div>
     <!-- ***** FRAME MODE ****** -->
@@ -1027,17 +1022,6 @@
 <!-- ***** BUTTON GO TOP ***** -->
 <a href="#" class="cd-top" title="Go Top"> <i class="fas fa-angle-up"></i> </a>
 <!-- ***** SCRIPTS ***** -->
-<script>
-$('.carousel').flickity({
-fullscreen: true,
-draggable: true,
-prevNextButtons: false,
-pageDots: true,
-autoPlay: 6000,
-fade: true
-});
-</script>
-
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const logoElement = document.getElementById("logo-menu");
